Fix issue with too small flashbang icons.

--- a/public/css/player-box.css
+++ b/public/css/player-box.css
@@ -119,7 +119,7 @@ ul.team-list > li {
 }
 
 .player-name {
-    width: 7em;
+    width: 10em;
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -140,6 +140,20 @@ ul.team-list > li {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
+    align-items: center;
+}
+
+.nade {
+    width: 1em;
+    height: 0.7em;
+    position: relative;
+}
+
+.nade-img {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .dollar {
